# FirstMultiAgentFramework

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  __init__.py  config.py  pyproject.toml  test_agent_communication.py  test_cli_flow.py  test_refresh.py
.claude/: settings.local.json
.github/workflows/: ci.yml
agents/: __init__.py  base.py  capabilities.py  chat.py  config.py  dbm.py  models.py  ping_pong.py  script_discovery.py  translator.py
bus/: __init__.py  messages.py  router.py
cli/: __init__.py  db_seed.py  maintain.py  run.py
data/: glossary.json
db/: __init__.py  dao.py  migrations.py  models.py  schema.sql  seed.py
examples/: readme.md  zone.geojson  zurich.epw
mcp/: __init__.py  cea_runner_server.py
scripts/: ci.py  dev_demo.py  simple_demo.py
test_cea_scripts/: demand_analysis.py  network_optimizer.py
tests/: test_canonicalize.py  test_chat_agent.py  test_chat_intents.py  test_contracts.py  test_maintenance_cli.py  test_message_schema.py  test_migrations.py  test_query_translator.py  test_translator_mapping.py
